--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
           </div>
           <!-- Proyecto 2 -->
-          <div class="col-12 col-md-6 col-lg-4">
+          <!--<div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
               <img src="imagenes/proyecto2.png" alt="Proyecto 1">
               <div class="overlay">
@@ -156,9 +156,9 @@
                 </div>
               </div>
             </div>
-          </div>
-          <!-- Proyecto 3 -->
-          <div class="col-12 col-md-6 col-lg-4">
+          </div>-->
+          <!-- Proyecto 3 --> 
+          <!-- <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
               <img src="imagenes/proyecto3.png" alt="Proyecto 1">
               <div class="overlay">
@@ -173,9 +173,9 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
           <!-- Proyecto 4 -->
-          <div class="col-12 col-md-6 col-lg-4">
+          <!--<div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
               <img src="imagenes/proyecto4.png" alt="Proyecto 1">
               <div class="overlay">
@@ -190,9 +190,9 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- Proyecto 5 -->
-          <div class="col-12 col-md-6 col-lg-4">
+          <!--<div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
               <img src="imagenes/proyecto5.png" alt="Proyecto 1">
               <div class="overlay">
@@ -207,9 +207,9 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- Proyecto 6 -->
-          <div class="col-12 col-md-6 col-lg-4">
+          <!--<div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
               <img src="imagenes/proyecto6.png" alt="Proyecto 1">
               <div class="overlay">
@@ -233,7 +233,7 @@
           <i class="bi bi-arrow-right-circle-fill"></i>
         </button>
       </a>
-    </section>
+    </section>-->
 
     <!-- Articulos -->
     <section class="articulos justify-content-start">
@@ -241,19 +241,19 @@
       <div class="card">
         <div class="card-header">
           Más recientes
-        </div>
+        <!--</div>
         <ul class="list-group list-group-flush">
           <a href="https://nancynsalazar.medium.com/gu%C3%ADa-r%C3%A1pida-para-construir-tu-portafolio-como-programador-a-9f02daeabb12" target="_blank" rel="noopener noreferrer">
             <li class="list-group-item">
               Guía rápida para construir tu portafolio como programador(a)
             </li>
-          </a>
-          <a href="https://nancynsalazar.medium.com/c%C3%B3mo-ser-un-a-mejor-programador-a-749c1bf98990" target="_blank" rel="noopener noreferrer">
+          </a>-->
+          <a href="https://sites.google.com/view/agrosalesaplicacion/p%C3%A1gina-principal" target="_blank" rel="noopener noreferrer">
             <li class="list-group-item">
-              Cómo ser un(a) mejor programador(a)
+            Agro Sales
             </li>
           </a>
-          <a href="#" target="_blank" rel="noopener noreferrer">
+          <!--<a href="#" target="_blank" rel="noopener noreferrer">
             <li class="list-group-item">
               Python leer archivo JSON - cómo cargar JSON desde un archivo y procesar dumps
             </li>
@@ -269,7 +269,7 @@
             </li>
           </a>
         </ul>
-      </div>
+      </div>-->>
       <a href="#" target="_blank" rel="noopener noreferrer">
         <button type="button" class="btn btn-info">
           Ver más artículos
@@ -281,7 +281,7 @@
     <!-- Testimonios -->
     <section id="testimonios" class="testimonios seccion-clara">
       <h2 class="seccion-titulo">Testimonios</h2>
-      <h3 class="seccion-descripcion">Estos son algunos testimonios de mis clientes...</h3>
+      <h3 class="seccion-descripcion">Estos son algunos testimonios de mis clientes</h3>
       
       <!-- Carrusel -->
       <div id="testimonios-carrusel" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -296,7 +296,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item">
+          <!--<div class="carousel-item">
             <div class="container">
               <img class="testimonio-imagen rounded-circle" src="imagenes/cliente2.svg" alt="Foto de Nora">
               <p class="testimonio-texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel iaculis urna. Fusce a ornare enim, vel interdum turpis. Sed aliquam interdum nisi a placerat.</p>
@@ -315,7 +315,7 @@
                 <p class="cargo">Director de AprendeAProgramar</p>
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#testimonios-carrusel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
